Support for keypress event and Js function modifiers in value pharsing.

--- a/examples/index.html
+++ b/examples/index.html
@@ -169,7 +169,9 @@ h4 {
 			<li>
 				<a href="flush.php"  target="_blank">Flush</a>
 			</li>
-			
+			<li>
+				<a href="keypress.php"  target="_blank">Keypress (>=5.4+)</a>
+			</li>			
 			<li>
 				Exec()
 			</li>
