Updated CHANGELOG.txt Enhanced some range statements Removed autoloading function Added extra php settings check to check for error display Added Strict Standard Check and tries to automatically turn it off of it is on. Fixed some notices Enhanced the uploader and re-did the ajax uploader documentation

--- a/examples/index.html
+++ b/examples/index.html
@@ -201,7 +201,7 @@ h4 {
 	<h3>Plugins</h3>
 		<ul>
 			<li>
-				<a href="plugin_upload_files.php"  target="_blank">Ajax Upload Files</a>
+				<a href="plugin_uploader.php"  target="_blank">Ajax Upload Files</a>
 			</li>
 			<li>
 				<a href="plugin_autocomplete.php"  target="_blank">Autocomplete</a>
