Support for PHP5.4x Fixed plugins docs issues with an old function reference interupting the page from displaying. Removed core/file/iframe.php that used to handle file uploading, dropped. Use uploader plugin instead.

--- a/examples/index.html
+++ b/examples/index.html
@@ -161,10 +161,10 @@ h4 {
 				<a href="update.php"  target="_blank">Update</a>
 			</li>
 			<li>
-				<a href="flush.php"  target="_blank">Call</a>
+				Call
 			</li>
 			<li>
-				<a href="flush.php"  target="_blank">Form</a>
+				Form
 			</li>
 			<li>
 				<a href="flush.php"  target="_blank">Flush</a>
@@ -201,7 +201,7 @@ h4 {
 	<h3>Plugins</h3>
 		<ul>
 			<li>
-				<a href="plugin_uploader.php"  target="_blank">Ajax Upload Files</a>
+				<a href="plugin_uploader.php"  target="_blank">Ajax Uploader</a>
 			</li>
 			<li>
 				<a href="plugin_autocomplete.php"  target="_blank">Autocomplete</a>
