added sizzle support for advanced selectors and fixed bug in passing values.

--- a/examples/index.html
+++ b/examples/index.html
@@ -142,7 +142,11 @@ h4 {
 		</ul>
 		
 		<h3>Other</h3>
+		
 		<ul>
+			<li>
+				<a href="sizzle.php"  target="_blank">Advanced Selectors</a>
+			</li>
 			<li>
 				<a href="js_properties.php"  target="_blank">JS Properties</a>
 			</li>
