--- a/examples/index.html
+++ b/examples/index.html
@@ -265,7 +265,10 @@ h4 {
 				<a href="validation_uploader.php"  target="_blank">Validation + Uploader</a>
 			</li>
 			<li>
-				<a href="plugins.php"  target="_blank">Creating Plugins</a>(+Javascript API +PHP API)
+				<a href="plugin_dracula.php"  target="_blank">Dracula</a> (Drag and Drop with Dragula)
+			</li>
+			<li>
+				<a href="plugins.php"  target="_blank">Creating Plugins</a> (+Javascript API +PHP API)
 			</li>
 		</ul>
 	</div>
