--- a/examples/index.html
+++ b/examples/index.html
@@ -54,9 +54,9 @@ h4 {
 
 <h2>Cjax Framework Demos/Samples </h2>
 
-<h4 id="demos">Download all 40+Demos/Samples</h4>
+<h4 id="demos">Download all 50+Demos/Samples</h4>
 <br />
-<a target="_blank" href="http://sourceforge.net/projects/cjax/files/EXAMPLES_//@version;.zip/download">Download</a>
+<a target="_blank" href="http://sourceforge.net/projects/cjax/files">Download</a>
 
 <div>
 	<div style="width: 200px;float: left">
