small change to cache process, and documentations/examples update

--- a/examples/index.html
+++ b/examples/index.html
@@ -63,10 +63,10 @@ h4 {
 	<h3>Demos/APIs</h3>
 	<ul>
 		<li>
-			<a href="bind_elements.php"  target="_blank">Bind Elements</a>
+			<a href="bind_elements.php">Bind Elements</a>
 		</li>
 		<li>
-			<a href="bind_actions.php"  target="_blank">Bind Actions</a>
+			<a href="bind_actions.php">Bind Actions</a>
 		</li>
 		<li>
 			<a href="click_ajax_request.php"  target="_blank">Click Ajax Request</a>
@@ -179,7 +179,7 @@ h4 {
 				<a href="update.php"  target="_blank">Update</a>
 			</li>
 			<li>
-				Call
+				<a href="call.php">Call</a>
 			</li>
 			<li>
 				Form
