--- a/examples/index.html
+++ b/examples/index.html
@@ -245,5 +245,22 @@ h4 {
 </div>
 
 </div>
+
+<!-- END CONTENT -->
+
+<div id="myfooter">
+	<p>
+		Previous Topic:&nbsp;&nbsp;<a href="#">Previous Class</a>
+		&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+		<a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+		<a href="http://cjax.sourceforge.net/examples">Demos Home</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+		<!-- Next Topic:&nbsp;&nbsp;<a href="#">Next Class</a> -->
+	</p>
+	<p>
+		<a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2012 &nbsp;&middot;&nbsp;
+		<a href="http://cjax.sourceforge.net/">Cjax</a>
+	</p>
+</div>
+
 </body>
 </html>
