Updating Cjax Demos

--- a/examples/index.html
+++ b/examples/index.html
@@ -69,19 +69,19 @@ h4 {
 			<a href="bind_actions.php">Bind Actions</a>
 		</li>
 		<li>
-			<a href="click_ajax_request.php"  target="_blank">Click Ajax Request</a>
+			<a href="click_ajax_request.php">Click Ajax Request</a>
 		</li>
 		<li>
-			<a href="cross_domain_ajax.php"  target="_blank">Cross Domain Ajax</a>
+			<a href="cross_domain_ajax.php">Cross Domain Ajax</a>
 		</li>	
 		<li>
-			<a href="confirm_action.php"  target="_blank">Confirm Action</a>
+			<a href="confirm_action.php">Confirm Action</a>
 		</li>
 		<li>
-			<a href="keyup_request.php"  target="_blank">Keyup Request</a>
+			<a href="keyup_request.php">Keyup Request</a>
 		</li>
 		<li>
-			<a href="load_html_file.php"  target="_blank">Load External HTML</a>
+			<a href="load_html_file.php">Load External HTML</a>
 		</li>
 		<li>
 			<a href="on_load_ajax_request.php"  target="_blank">Onload Ajax request</a>
@@ -188,7 +188,7 @@ h4 {
 				<a href="flush.php"  target="_blank">Flush</a>
 			</li>
 			<li>
-				<a href="keypress.php"  target="_blank">Keypress (>=5.4+)</a>
+				<a href="keypress.php"  target="_blank">Keypress</a>
 			</li>			
 			<li>
 				Exec()
