Updating Examples.... pain in the ass

--- a/examples/index.html
+++ b/examples/index.html
@@ -84,43 +84,43 @@ h4 {
 			<a href="load_html_file.php">Load External HTML</a>
 		</li>
 		<li>
-			<a href="on_load_ajax_request.php"  target="_blank">Onload Ajax request</a>
+			<a href="on_load_ajax_request.php">Onload Ajax request</a>
 		</li>
 		<li>
-			<a href="overlay.php"  target="_blank">Overlay</a>
+			<a href="overlay.php">Overlay</a>
 		</li>
 		<li>
-			<a href="post.php"  target="_blank">Post ajax</a>
+			<a href="post.php">Post ajax</a>
 		</li>
 		<li>
-			<a href="propagate_dropdown.php"  target="_blank">Propagate Dropdown</a>
+			<a href="propagate_dropdown.php">Propagate Dropdown</a>
 		</li>
 		<li>
-			<a href="propagate_dropdown_input.php"  target="_blank">Propagate Dropdown input</a>
+			<a href="propagate_dropdown_input.php">Propagate Dropdown input</a>
 		</li>
 		<li>
-			<a href="recursive_ajax.php"  target="_blank">Recursive Ajax Requests</a>
+			<a href="recursive_ajax.php">Recursive Ajax Requests</a>
 		</li>
 			<li>
-			<a href="search.php"  target="_blank">Search</a>
+			<a href="search.php">Search</a>
 		</li>
 		<li>
-			<a href="send_form.php"  target="_blank">Submit Form</a>
+			<a href="send_form.php">Submit Form</a>
 		</li>
 		<li>
-			<a href="send_input.php"  target="_blank">Send inputs</a>
+			<a href="send_input.php">Send inputs</a>
 		</li>
 		<li>
-			<a href="passing_parameters.php"  target="_blank">Passing Parameters</a>
+			<a href="passing_parameters.php">Passing Parameters</a>
 		</li>
 		<li>
-			<a href="setting_values.php"  target="_blank">Setting Values</a>
+			<a href="setting_values.php">Setting Values</a>
 		</li>
 		<li>
-			<a href="display_messages.php"  target="_blank">Display Messages</a>
+			<a href="display_messages.php">Display Messages</a>
 		</li>
 		<li>
-			<a href="timeout.php"  target="_blank">Timeouts</a>
+			<a href="timeout.php">Timeouts</a>
 		</li>
 	</ul>
 	</div>
@@ -128,16 +128,16 @@ h4 {
 	<h3>Samples</h3>
 		<ul>
 			<li>
-				<a href="overlay_validation.php"  target="_blank">Ajax Overlay + Validation</a>
+				<a href="overlay_validation.php">Ajax Overlay + Validation</a>
 			</li>
 			<li>
-				<a href="ajax_login.php"  target="_blank">Ajax Login</a>
+				<a href="ajax_login.php">Ajax Login</a>
 			</li>
 			<li>
-				<a href="check_username.php"  target="_blank">Check Username</a>
+				<a href="check_username.php">Check Username</a>
 			</li>
 			<li>
-				<a href="calculator.php"  target="_blank">Calculator</a>
+				<a href="calculator.php">Calculator</a>
 			</li>
 		</ul>
 		
@@ -145,16 +145,16 @@ h4 {
 		
 		<ul>
 			<li>
-				<a href="sizzle.php"  target="_blank">Advanced Selectors</a>
+				<a href="sizzle.php">Advanced Selectors</a>
 			</li>
 			<li>
-				<a href="js_properties.php"  target="_blank">JS Properties</a>
+				<a href="js_properties.php">JS Properties</a>
 			</li>
 			<li>
-				<a href="main_property.php"  target="_blank">Main Property</a>
+				<a href="main_property.php">Main Property</a>
 			</li>
 			<li>
-				<a href="js_functions.php"  target="_blank">Access JS Functions</a>
+				<a href="js_functions.php">Access JS Functions</a>
 			</li>
 		</ul>
 		
@@ -164,19 +164,19 @@ h4 {
 	<h3>Functions</h3>
 		<ul>
 			<li>
-				<a href="append.php"  target="_blank">Append</a>
+				<a href="append.php">Append</a>
 			</li>
 			<li>
-				<a href="prepend.php"  target="_blank">Prepend</a>
+				<a href="prepend.php">Prepend</a>
 			</li>
 			<li>
-				<a href="insert.php"  target="_blank">Insert</a>
+				<a href="insert.php">Insert</a>
 			</li>
 			<li>
-				<a href="replace.php"  target="_blank">Replace</a>
+				<a href="replace.php">Replace</a>
 			</li>
 			<li>
-				<a href="update.php"  target="_blank">Update</a>
+				<a href="update.php">Update</a>
 			</li>
 			<li>
 				<a href="call.php">Call</a>
@@ -185,16 +185,16 @@ h4 {
 				Form
 			</li>
 			<li>
-				<a href="flush.php"  target="_blank">Flush</a>
+				<a href="flush.php">Flush</a>
 			</li>
 			<li>
-				<a href="keypress.php"  target="_blank">Keypress</a>
+				<a href="keypress.php">Keypress</a>
 			</li>			
 			<li>
 				Exec()
 			</li>
 			<li>
-				<a href="click.php"  target="_blank">Click</a>
+				<a href="click.php">Click</a>
 			</li>
 			<li>
 				change()
@@ -209,7 +209,7 @@ h4 {
 				wait()
 			</li>
 			<li>
-				<a href="location.php"  target="_blank">location()</a>
+				<a href="location.php">location()</a>
 			</li>
 		</ul>
 		
@@ -221,22 +221,22 @@ h4 {
 	<h3>Plugins</h3>
 		<ul>
 			<li>
-				<a href="plugin_uploader.php"  target="_blank">Ajax Uploader</a>
+				<a href="plugin_uploader.php">Ajax Uploader</a>
 			</li>
 			<li>
-				<a href="plugin_autocomplete.php"  target="_blank">Autocomplete</a>
+				<a href="plugin_autocomplete.php">Autocomplete</a>
 			</li>
 			<li>
-				<a href="plugin_validate.php"  target="_blank">Validate</a> (Jquery+Jquery.validate)
+				<a href="plugin_validate.php">Validate</a> (Jquery+Jquery.validate)
 			</li>
 			<li>
-				<a href="plugin_uploadify.php"  target="_blank">Uploadify</a> (Jquery+Jquery.uploadify)
+				<a href="plugin_uploadify.php">Uploadify</a> (Jquery+Jquery.uploadify)
 			</li>
 			<li>
-				<a href="validation_uploader.php"  target="_blank">Validation + Uploader</a>
+				<a href="validation_uploader.php">Validation + Uploader</a>
 			</li>
 			<li>
-				<a href="plugins.php"  target="_blank">Creating Plugins</a>(+Javascript API +PHP API)
+				<a href="plugins.php">Creating Plugins</a>(+Javascript API +PHP API)
 			</li>
 		</ul>
 	</div>
