--- a/examples/index.html
+++ b/examples/index.html
@@ -179,6 +179,9 @@ h4 {
 				<a href="update.php">Update</a>
 			</li>
 			<li>
+				<a href="updateX.php">UpdateX</a>
+			</li>
+			<li>
 				<a href="call.php">Call</a>
 			</li>
 			<li>
@@ -194,13 +197,7 @@ h4 {
 				<a href="click.php">Click</a>
 			</li>
 			<li>
-				change()
-			</li>
-			<li>
-				keyup()
-			</li>
-			<li>
-				keydown()
+				<a href="triggers.php">triggers</a>
 			</li>
 			<li>
 				wait()
