Update examples, new API UpdateX()  new example.

--- a/examples/index.html
+++ b/examples/index.html
@@ -197,13 +197,13 @@ h4 {
 				<a href="click.php">Click</a>
 			</li>
 			<li>
-				<a href="triggers.php">triggers</a>
+				<a href="triggers.php">Triggers</a>
 			</li>
 			<li>
 				wait()
 			</li>
 			<li>
-				<a href="location.php">location()</a>
+				<a href="location.php">Location()</a>
 			</li>
 		</ul>
 		
