--- a/examples/index.html
+++ b/examples/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="resources/css/user_guide.css" media="all">
 <title>Demos</title>
 <style>
+
 ul li  {
 	font-family:sans-serif;
 	font-size: 12px;
@@ -14,6 +15,8 @@ ul li  {
 h4 {
  display: inline;
 }
+
+
 </style>
 </head>
 <body>
@@ -54,12 +57,12 @@ h4 {
 
 <h2>Cjax Framework Demos/Samples </h2>
 
-<h4 id="demos">Download all 50+Demos/Samples</h4>
+<h4 id="demos">Download all 70+Demos/Samples/Docs</h4>
 <br />
 <a target="_blank" href="http://sourceforge.net/projects/cjax/files">Download</a>
 
 <div>
-	<div style="width: 200px;float: left">
+	<div style="width: 170px;float: left">
 	<h3>Demos/APIs</h3>
 	<ul>
 		<li>
@@ -124,11 +127,11 @@ h4 {
 		</li>
 	</ul>
 	</div>
-	<div style="width: 200px;float: left">
+	<div style="width: 180px;float: left">
 	<h3>Samples</h3>
 		<ul>
 			<li>
-				<a href="overlay_validation.php">Ajax Overlay + Validation</a>
+				<a href="overlay_validation.php">Overlay + Validation</a>
 			</li>
 			<li>
 				<a href="ajax_login.php">Ajax Login</a>
@@ -211,7 +214,7 @@ h4 {
 	</div>
 	
 	
-	<div style="width: 290px;float: left">
+	<div style="width: 200px;float: left">
 	<h3>Plugins</h3>
 		<ul>
 			<li>
@@ -221,18 +224,85 @@ h4 {
 				<a href="plugin_autocomplete.php">Autocomplete</a>
 			</li>
 			<li>
-				<a href="plugin_validate.php">Validate</a> (Jquery+Jquery.validate)
+				<a href="plugin_validate.php">Validate</a> (+Jquery.validate)
 			</li>
 			<li>
-				<a href="plugin_uploadify.php">Uploadify</a> (Jquery+Jquery.uploadify)
+				<a href="plugin_uploadify.php">Uploadify</a> (+Jquery.uploadify)
 			</li>
 			<li>
 				<a href="validation_uploader.php">Validation + Uploader</a>
 			</li>
 			<li>
-				<a href="plugins.php">Creating Plugins</a>(+Javascript API +PHP API)
+				<a href="plugins.php">Creating Plugins</a>(JS+PHP API)
 			</li>
 		</ul>
+	</div>
+
+	<div style="float: left; width: 180px">
+		<h3>Docs</h3>
+		<ul>
+			<li>
+				<a href="docs/how_to_use.php">How To Use</a>
+			</li>
+			<li>
+				<a href="docs/Iniciating_the_JavaScript_Engine.php">Initiating the Javascript Engine</a>
+			</li>
+			<li>
+				<a href="docs/controllers.php">Creating Controllers</a>
+			</li>
+			<li>
+				<a href="docs/passing_parameters.php">Passing Parameters</a>
+			</li>
+
+			<li>
+				<a href="docs/url_styles.php">URL Styles</a>
+			</li>
+			<li>
+				<a href="docs/access_fields_in_parameters.php">Access fields in parameters</a>
+			</li>
+			<li>
+				<a href="docs/configuation.php">Configuration</a>
+			</li>
+			<li>
+				<a href="docs/includes.php">Includes</a>
+			</li>
+			<li>
+				<a href="docs/auth_and_routing.php">Custom Auth and Routes</a>
+			</li>
+			<li>
+				<a href="docs/ajax_request_in_a_div.php">Ajax Request in a Div</a>
+			</li>
+			<li>
+				<a href="docs/click_to_request_ajax.php">Click to Request Ajax</a>
+			</li>
+			<li>
+				<a href="docs/click_to_submit_a_form.php">Click to Submit Form</a>
+			</li>
+			<li>
+				<a href="docs/overlay_lightbox.php">Show Overlay Lightbox</a>
+			</li>
+			<li>
+				<a href="docs/element_properties.php">Elements Properties</a>
+			</li>
+			<li>
+				<a href="docs/manipulating_container.php">Manipulating Elements</a>
+			</li>
+			<li>
+				<a href="docs/value_modifiers.php">Value Mofidifers</a>
+			</li>
+			<li>
+				<a href="docs/bind_elements.php">Binding Elements</a>
+			</li>
+			<li>
+				<a href="docs/prepend_append.php">Prepend/Append</a>
+			</li>
+			<li>
+				<a href="docs/api_table.php">API Table</a>
+			</li>
+		</ul>
+
+
+
 	</div>
 	
 	<div style='clear:both'></div>
