updating docs/examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -62,7 +62,7 @@ h4 {
 <a target="_blank" href="http://sourceforge.net/projects/cjax/files">Download</a>
 
 <div>
-	<div style="width: 170px;float: left">
+	<div style="width: 190px;float: left">
 	<h3>Demos/APIs</h3>
 	<ul>
 		<li>
@@ -159,6 +159,18 @@ h4 {
 			<li>
 				<a href="js_functions.php">Access JS Functions</a>
 			</li>
+			<li>
+				<a href="element_properties.php">Elements Properties</a>
+			</li>
+			<li>
+				<a href="manipulating_container.php">Manipulating Elements</a>
+			</li>
+			<li>
+				<a href="value_modifiers.php">Value Mofidifers</a>
+			</li>
+			<li>
+				<a href="prepend_append.php">Prepend/Append</a>
+			</li>
 		</ul>
 		
 	</div>
@@ -238,7 +250,7 @@ h4 {
 		</ul>
 	</div>
 
-	<div style="float: left; width: 180px">
+	<div style="float: left; width: 200px">
 		<h3>Docs</h3>
 		<ul>
 			<li>
@@ -268,33 +280,6 @@ h4 {
 			</li>
 			<li>
 				<a href="docs/auth_and_routing.php">Custom Auth and Routes</a>
-			</li>
-			<li>
-				<a href="docs/ajax_request_in_a_div.php">Ajax Request in a Div</a>
-			</li>
-			<li>
-				<a href="docs/click_to_request_ajax.php">Click to Request Ajax</a>
-			</li>
-			<li>
-				<a href="docs/click_to_submit_a_form.php">Click to Submit Form</a>
-			</li>
-			<li>
-				<a href="docs/overlay_lightbox.php">Show Overlay Lightbox</a>
-			</li>
-			<li>
-				<a href="docs/element_properties.php">Elements Properties</a>
-			</li>
-			<li>
-				<a href="docs/manipulating_container.php">Manipulating Elements</a>
-			</li>
-			<li>
-				<a href="docs/value_modifiers.php">Value Mofidifers</a>
-			</li>
-			<li>
-				<a href="docs/bind_elements.php">Binding Elements</a>
-			</li>
-			<li>
-				<a href="docs/prepend_append.php">Prepend/Append</a>
 			</li>
 			<li>
 				<a href="docs/api_table.php">API Table</a>
