updating docs/examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -59,7 +59,7 @@ h4 {
 
 <h4 id="demos">Download all 70+Demos/Samples/Docs</h4>
 <br />
-<a target="_blank" href="http://sourceforge.net/projects/cjax/files">Download</a>
+<a target="_blank" href="https://github.com/ajaxboy/cjax">Download</a>
 
 <div>
 	<div style="width: 190px;float: left">
