update examples list

--- a/examples/index.html
+++ b/examples/index.html
@@ -175,7 +175,7 @@ h4 {
 		
 	</div>
 	
-	<div style="width: 130px;float: left">
+	<div style="width: 120px;float: left">
 	<h3>Functions</h3>
 		<ul>
 			<li>
@@ -212,9 +212,6 @@ h4 {
 				<a href="click.php">Click</a>
 			</li>
 			<li>
-				<a href="triggers.php">Triggers</a>
-			</li>
-			<li>
 				wait()
 			</li>
 			<li>
@@ -236,21 +233,21 @@ h4 {
 				<a href="plugin_autocomplete.php">Autocomplete</a>
 			</li>
 			<li>
-				<a href="plugin_validate.php">Validate</a> (+Jquery.validate)
+				<a href="plugin_validate.php">Validate</a> (Jquery.validate)
 			</li>
 			<li>
-				<a href="plugin_uploadify.php">Uploadify</a> (+Jquery.uploadify)
+				<a href="plugin_uploadify.php">Uploadify</a> (Jquery.uploadify)
 			</li>
 			<li>
 				<a href="validation_uploader.php">Validation + Uploader</a>
 			</li>
 			<li>
-				<a href="plugins.php">Creating Plugins</a>(JS+PHP API)
+				<a href="plugins.php">Creating Plugins</a>(JS+PHP)
 			</li>
 		</ul>
 	</div>
 
-	<div style="float: left; width: 200px">
+	<div style="float: left; width: 220px">
 		<h3>Docs</h3>
 		<ul>
 			<li>
@@ -280,6 +277,9 @@ h4 {
 			</li>
 			<li>
 				<a href="docs/auth_and_routing.php">Custom Auth and Routes</a>
+			</li>
+			<li>
+				<a href="docs/triggers.php">Triggers</a>
 			</li>
 			<li>
 				<a href="docs/api_table.php">API Table</a>
