Full codeigniter integration, support 100%

--- a/examples/index.html
+++ b/examples/index.html
@@ -61,6 +61,12 @@ h4 {
 <br />
 <a target="_blank" href="https://github.com/ajaxboy/cjax">Download</a>
 
+<h5>Welcome to the World of Cjax</h5>
+Cjax aims to fill a void that you didn't know existed. Let Cjax bring to a whole new level of thikning when doing application interactions.
+
+
+<br />
+
 <div>
 	<div style="width: 190px;float: left">
 	<h3>Demos/APIs</h3>
