--- a/examples/index.html
+++ b/examples/index.html
@@ -57,14 +57,15 @@ h4 {
 
 <h2>Cjax Framework Demos/Samples </h2>
 
-<h4 id="demos">Download all 70+Demos/Samples/Docs</h4>
+<h4 id="demos"><a target="_blank" href="https://github.com/ajaxboy/cjax">Download</a> all 70+Demos/Samples/Docs</h4>
 <br />
-<a target="_blank" href="https://github.com/ajaxboy/cjax">Download</a>
+
 
 <h5>Welcome to the World of Cjax</h5>
-Cjax aims to fill a void that you didn't know existed. Let Cjax bring to a whole new level of thikning when doing application interactions.
-
-
+<p>
+Cjax aims to fill a void that you didn't know existed. Let Cjax bring you to a whole new level of thinking when doing application interactions.
+Let yourself loose, and explore the posiblities of what you can do with Cjax. Full professional installation is available, contact author if you have any questions.
+</p>
 <br />
 
 <div>
