--- a/examples/index.html
+++ b/examples/index.html
@@ -258,6 +258,9 @@ Let yourself loose, and explore the posiblities of what you can do with Cjax. Fu
 		<h3>Docs</h3>
 		<ul>
 			<li>
+				<a href="docs/installing.php.php">Installing</a>
+			</li>
+			<li>
 				<a href="docs/how_to_use.php">How To Use</a>
 			</li>
 			<li>
