--- a/examples/index.html
+++ b/examples/index.html
@@ -261,7 +261,7 @@ Let yourself loose, and explore the posiblities of what you can do with Cjax. Fu
 				<a href="docs/installing.php">Installing</a>
 			</li>
 			<li>
-				<a href="docs/upgrading.php">Installing</a>
+				<a href="docs/upgrading.php">Upgrading</a>
 			</li>
 			<li>
 				<a href="docs/how_to_use.php">How To Use</a>
