--- a/examples/index.html
+++ b/examples/index.html
@@ -297,6 +297,9 @@ Let yourself loose, and explore the posiblities of what you can do with Cjax. Fu
 			<li>
 				<a href="docs/api_table.php">API Table</a>
 			</li>
+			<li>
+				<a href="docs/troubleshooting.php">Troubleshooting</a>
+			</li>
 		</ul>
 
 
