new doc moving cjax

--- a/examples/index.html
+++ b/examples/index.html
@@ -295,6 +295,9 @@ Let yourself loose, and explore the posiblities of what you can do with Cjax. Fu
 				<a href="docs/triggers.php">Triggers</a>
 			</li>
 			<li>
+				<a href="docs/moving_cjax.php">Movin Cjax Dir</a>
+			</li>
+			<li>
 				<a href="docs/api_table.php">API Table</a>
 			</li>
 			<li>
