--- a/examples/index.html
+++ b/examples/index.html
@@ -152,7 +152,7 @@ Let yourself loose, and explore the posiblities of what you can do with Cjax. Fu
 		</ul>
 		
 		<h3>Other</h3>
-		
+
 		<ul>
 			<li>
 				<a href="sizzle.php">Advanced Selectors</a>
@@ -252,6 +252,20 @@ Let yourself loose, and explore the posiblities of what you can do with Cjax. Fu
 				<a href="plugins.php">Creating Plugins</a>(JS+PHP)
 			</li>
 		</ul>
+
+
+
+		<h3>Effects</h3>
+
+		<ul>
+			<li>
+				<a href="spin.php">Spin Text</a>
+			</li>
+			<li>
+				<a href="js_properties.php">JS Properties</a>
+			</li>
+		</ul>
+
 	</div>
 
 	<div style="float: left; width: 220px">
