improvements on payload, and plugins loading the same files, and file processing and loading. Will load controller from default controllers, if plugin controller dir not found. new example pagination, in the works.

--- a/examples/index.html
+++ b/examples/index.html
@@ -263,6 +263,16 @@ Let yourself loose, and explore the posiblities of what you can do with Cjax. Fu
 			</li>
 		</ul>
 
+
+
+		<h3>Tools</h3>
+
+		<ul>
+			<li>
+				<a href="pagination.php">Spin Text</a>
+			</li>
+		</ul>
+
 	</div>
 
 	<div style="float: left; width: 220px">
