--- a/examples/index.html
+++ b/examples/index.html
@@ -269,7 +269,7 @@ Let yourself loose, and explore the posiblities of what you can do with Cjax. Fu
 
 		<ul>
 			<li>
-				<a href="pagination.php">Spin Text</a>
+				<a href="pagination.php">Pagination</a>
 			</li>
 		</ul>
 
