prop() and swap(), further integration with advanced selectors. docs updates

--- a/examples/index.html
+++ b/examples/index.html
@@ -64,9 +64,13 @@ h4 {
 <h5>Welcome to the World of Cjax</h5>
 <p>
 Cjax aims to fill a void that you didn't know existed. Let Cjax bring you to a whole new level of thinking when doing application interactions.
-Let yourself loose, and explore the posiblities of what you can do with Cjax. Full professional installation is available, contact author if you have any questions.
+Let yourself loose, and explore the posiblities of what you can do with Cjax. Full professional installation is available, <a href="mailto:&#099;&#106;&#120;&#120;&#105;&#050;&#049;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;?subject=Questions About Cjax">contact author</a> if you have any questions.
 </p>
-<br />
+<p class="soft-note">
+	This site's examples and, Cjax in general are updated on regular basis from <a  target="_blank" href="https://github.com/ajaxboy/cjax/tree/master">development branch</a>.
+	You may see things here that may not be available on the latest release. You are welcome to try the "latest" stuff. Though for production
+	we recommend you use a stable release.
+</p>
 
 <div>
 	<div style="width: 190px;float: left">
